@@ -319,6 +319,10 @@ typedef enum {
 */
 typedef struct dav_resource_private dav_resource_private;
 
+#ifdef APR_XML_X2T_PARSED
+typedef struct dav_acl_provider dav_acl_provider;
+#endif
+
 /*
 ** Resource descriptor, generated by a repository provider.
 **
@@ -417,6 +421,12 @@ typedef struct dav_resource {
        following pool should be used. Its lifetime will be at least as
        long as the dav_resource structure. */
     apr_pool_t *pool;
+
+#ifdef APR_XML_X2T_PARSED
+    const dav_acl_provider *acls; /* acls used for this resource */
+#endif
+
+    void *ctx;  /* additional parameter */
 
 } dav_resource;
 
@@ -2497,6 +2507,39 @@ typedef struct {
     int propid;                          /* live property ID */
     const dav_hooks_liveprop *provider;  /* the provider defining this prop */
 } dav_elem_private;
+
+
+/* --------------------------------------------------------------------
+**
+** DAV ACL HOOKS
+*/
+#ifdef APR_XML_X2T_PARSED
+
+typedef struct dav_acl_provider
+{
+    dav_error * (*acl_check_method)(request_rec *r,
+                                    const dav_resource *resource);
+
+    dav_error * (*acl_check_read)(request_rec *r,
+                                  const dav_resource *resource);
+
+    dav_error * (*acl_check_prop)(request_rec *r,
+                                  const dav_resource *resource,
+                                  const dav_prop_name *name,
+                                  dav_prop_insert what);
+
+    void (*acl_post_processing)(request_rec *r,
+                                const dav_resource *resource,
+                                int new_resource_created);
+    void *ctx;
+} dav_acl_provider;
+
+DAV_DECLARE(void) dav_acl_provider_register(apr_pool_t *p,
+                                            const dav_acl_provider *acl);
+
+DAV_DECLARE(const dav_acl_provider *) dav_get_acl_providers();
+
+#endif
 
 /* --------------------------------------------------------------------
 **
